--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>Phaser Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="debug"></div>
+    <div id="phaser-game"></div>
 
-
-</body>
+    <script src="phaser.min.js"></script>
     <script src="helpers.js"></script>
     <script src="index.js"></script>
+    <script src="main.js"></script>
+</body>
 </html>
